--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+/* styles.css */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+
 html {
   overflow: auto;
 }
