--- a/styles.css
+++ b/styles.css
@@ -8,47 +8,156 @@ html {
   overflow: auto;
 }
 
-nav {
-  height: 20%;
-  background-color: #967adc;
-  height: 50px;
+#navicon img {
+  height: 40px;
 }
+
+header {
+  background-color: #967adc;
+  color: white;
+  padding: 30px 10px;
+}
+
+.header-container {
+  display: flex;
+  /* justify-content: space-between; */
+  justify-content: flex-end;
+  align-items: center;
+  margin: 0 5%;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav li {
+  margin-right: 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+}
+
 
 body {
   background-color: #98ddca;
 }
 
+main {
+  margin: 7% 7%;
+}
+
+
 .btn {
   background-color: #ff6f61;
   color: white;
+  width: 20%;
+  font-size: 28px;
 }
 
 .higlights {
   background-color: #f9e58a;
+  margin-top: 3%;
+  width: 85%;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  margin: 2% auto;
 }
+
 
 footer {
   background-color: #967adc;
-  height: 50px;
+  padding: 60px 10px;
 }
 
 h1 {
   font-family: 'Comic Neue', cursive;
-  color: white;
+  color: yellow;
   text-align: center;
   /* //issue with the the font size, the rror  Refused to apply style from 'http://127.0.0.1:5500/assignment-2-quackness/tailwindcss/utilities' because its MIME type ('text/html') is not a supported stylesheet MIME type, and strict MIME checking is enabled. */
   font-size: 50px;
+  margin-bottom: 3%;
 }
 
 .higlights {
   display: flex;
+  border: 5px dotted white;
 }
 
 .higlights-text {
   flex-direction: column;
+  margin: auto 30px;
 }
 
-.test {
-  background-color: black;
-  color: red;
+.higlights img {
+  width: 300px;
+  height: auto;
+}
+
+.higlights-text p:first-child {
+  font-weight: bolder;
+  font-size: 20px;
+  margin-bottom: 1%;
+  color: brown;
+}
+
+ul {
+  list-style: disc;
+  margin-left: 5%;
+}
+
+li::marker {
+  color: #ff6f61;
+  /* Change the color to your desired color */
+}
+
+.call-to-action {
+  text-align: center;
+  height: 190px;
+  border-top: solid coral 3px;
+  border-bottom: solid coral 3px;
+}
+
+.call-to-action p {
+  color: aliceblue;
+  font-weight: bolder;
+  margin-bottom: 40px;
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.keys {
+  font-family: 'Nunito Sans', sans-serif;
+  font-family: 'Playpen Sans', cursive;
+  font-size: larger;
+  color: #ff6f61
+}
+
+.intro {
+  margin-bottom: 3%;
+}
+
+.intro p {
+  margin-bottom: 3%;
+}
+
+ul {
+  margin: 2%;
+}
+
+li {
+  font-size: large;
+}
+
+
+.intro p:first-child {
+  font-weight: bolder;
+  font-size: 20px;
 }
