--- a/output.css
+++ b/output.css
@@ -467,7 +467,7 @@ body {
 }
 
 main {
-  margin: 7% 7%;
+  margin: 7% 7% 3% 7%;
 }
 
 
@@ -476,6 +476,11 @@ main {
   color: white;
   width: 20%;
   font-size: 28px;
+}
+
+.btn:hover {
+  color: #ff6f61;
+  background-color: aliceblue;
 }
 
 .higlights {
@@ -577,4 +582,24 @@ li {
 .intro p:first-child {
   font-weight: bolder;
   font-size: 20px;
+}
+
+#phaser-game {
+  margin-bottom: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+canvas {
+  margin-top: 2%;
+}
+
+.game {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: xx-large;
+  color: #ff6f61;
+  font-weight: bolder;
+  background-color: aliceblue;
 }
