--- a/output.css
+++ b/output.css
@@ -416,6 +416,15 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.m-\[2\%\] {
+  margin: 2%;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mb-\[3\%\] {
+  margin-bottom: 3%;
+}
 .grow {
   flex-grow: 1;
 }
@@ -425,17 +434,20 @@ video {
 .border {
   border-width: 1px;
 }
+.border-b-4 {
+  border-bottom-width: 4px;
+}
 .border-double {
   border-style: double;
+}
+.border-indigo-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
 }
 .border-y-rose-500 {
   --tw-border-opacity: 1;
   border-top-color: rgb(244 63 94 / var(--tw-border-opacity));
   border-bottom-color: rgb(244 63 94 / var(--tw-border-opacity));
-}
-.bg-violet-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(139 92 246 / var(--tw-bg-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -452,6 +464,10 @@ video {
 .from-10\% {
   --tw-gradient-from-position: 10%;
 }
+.via-purple-500 {
+  --tw-gradient-to: rgb(168 85 247 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), #a855f7 var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
 .via-sky-500 {
   --tw-gradient-to: rgb(14 165 233 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #0ea5e9 var(--tw-gradient-via-position), var(--tw-gradient-to);
@@ -462,14 +478,28 @@ video {
 .to-emerald-500 {
   --tw-gradient-to: #10b981 var(--tw-gradient-to-position);
 }
+.to-pink-500 {
+  --tw-gradient-to: #ec4899 var(--tw-gradient-to-position);
+}
 .to-90\% {
   --tw-gradient-to-position: 90%;
+}
+.text-center {
+  text-align: center;
+}
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 .italic {
   font-style: italic;
 }
 .tracking-wider {
   letter-spacing: 0.05em;
+}
+.text-yellow-300 {
+  --tw-text-opacity: 1;
+  color: rgb(253 224 71 / var(--tw-text-opacity));
 }
 .outline-dotted {
   outline-style: dotted;
@@ -488,7 +518,6 @@ html {
 }
 
 header {
-  background-color: #967adc;
   color: white;
   padding: 30px 10px;
 }
@@ -525,7 +554,7 @@ body {
 }
 
 main {
-  margin: 7% 7% 3% 7%;
+  margin: 5% 7% 3% 7%;
 }
 
 
@@ -559,11 +588,6 @@ footer {
 
 h1 {
   font-family: 'Comic Neue', cursive;
-  color: yellow;
-  text-align: center;
-  /* //issue with the the font size, the rror  Refused to apply style from 'http://127.0.0.1:5500/assignment-2-quackness/tailwindcss/utilities' because its MIME type ('text/html') is not a supported stylesheet MIME type, and strict MIME checking is enabled. */
-  font-size: 50px;
-  margin-bottom: 3%;
 }
 
 .higlights {
@@ -595,7 +619,6 @@ ul {
 
 li::marker {
   color: #ff6f61;
-  /* Change the color to your desired color */
 }
 
 .call-to-action {
@@ -620,22 +643,10 @@ li::marker {
   color: #ff6f61
 }
 
-.intro {
-  margin-bottom: 3%;
-}
-
-.intro p {
-  margin-bottom: 3%;
-}
-
-ul {
-  margin: 2%;
-}
 
 li {
   font-size: large;
 }
-
 
 .intro p:first-child {
   font-weight: bolder;
@@ -664,25 +675,4 @@ canvas {
 .hover\:bg-violet-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(124 58 237 / var(--tw-bg-opacity));
-}
-
-.focus\:outline-none:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.focus\:ring:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-violet-300:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(196 181 253 / var(--tw-ring-opacity));
-}
-
-.active\:bg-violet-700:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(109 40 217 / var(--tw-bg-opacity));
 }
