--- a/output.css
+++ b/output.css
@@ -416,8 +416,27 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.m-0 {
+  margin: 0px;
+}
 .m-\[2\%\] {
   margin: 2%;
+}
+.mx-\[3\%\] {
+  margin-left: 3%;
+  margin-right: 3%;
+}
+.mx-\[5\%\] {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+.my-0 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+.my-\[5\%\] {
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 .mb-4 {
   margin-bottom: 1rem;
@@ -425,8 +444,35 @@ video {
 .mb-\[3\%\] {
   margin-bottom: 3%;
 }
+.ml-\[7\%\] {
+  margin-left: 7%;
+}
+.mr-5 {
+  margin-right: 1.25rem;
+}
+.mr-\[7\%\] {
+  margin-right: 7%;
+}
+.flex {
+  display: flex;
+}
+.w-1\/3 {
+  width: 33.333333%;
+}
 .grow {
   flex-grow: 1;
+}
+.list-none {
+  list-style-type: none;
+}
+.items-center {
+  align-items: center;
+}
+.justify-end {
+  justify-content: flex-end;
+}
+.overflow-auto {
+  overflow: auto;
 }
 .rounded-md {
   border-radius: 0.375rem;
@@ -448,6 +494,18 @@ video {
   --tw-border-opacity: 1;
   border-top-color: rgb(244 63 94 / var(--tw-border-opacity));
   border-bottom-color: rgb(244 63 94 / var(--tw-border-opacity));
+}
+.bg-\[\#98ddca\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(152 221 202 / var(--tw-bg-opacity));
+}
+.bg-\[\#f9e58a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 229 138 / var(--tw-bg-opacity));
+}
+.bg-\[\#ff6f61\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 111 97 / var(--tw-bg-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -484,6 +542,21 @@ video {
 .to-90\% {
   --tw-gradient-to-position: 90%;
 }
+.p-0 {
+  padding: 0px;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
 .text-center {
   text-align: center;
 }
@@ -491,15 +564,36 @@ video {
   font-size: 3rem;
   line-height: 1;
 }
+.text-\[28px\] {
+  font-size: 28px;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+.font-bold {
+  font-weight: 700;
+}
 .italic {
   font-style: italic;
 }
 .tracking-wider {
   letter-spacing: 0.05em;
 }
+.text-stone-50 {
+  --tw-text-opacity: 1;
+  color: rgb(250 250 249 / var(--tw-text-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .text-yellow-300 {
   --tw-text-opacity: 1;
   color: rgb(253 224 71 / var(--tw-text-opacity));
+}
+.no-underline {
+  text-decoration-line: none;
 }
 .outline-dotted {
   outline-style: dotted;
@@ -509,69 +603,7 @@ video {
 }
 
 
-html {
-  overflow: auto;
-}
-
-#navicon img {
-  height: 40px;
-}
-
-header {
-  color: white;
-  padding: 30px 10px;
-}
-
-.header-container {
-  display: flex;
-  /* justify-content: space-between; */
-  justify-content: flex-end;
-  align-items: center;
-  margin: 0 5%;
-}
-
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-}
-
-nav li {
-  margin-right: 20px;
-}
-
-nav a {
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-
-body {
-  background-color: #98ddca;
-}
-
-main {
-  margin: 5% 7% 3% 7%;
-}
-
-
-.btn {
-  background-color: #ff6f61;
-  color: white;
-  width: 20%;
-  font-size: 28px;
-}
-
-.btn:hover {
-  color: #ff6f61;
-  background-color: aliceblue;
-}
-
 .higlights {
-  background-color: #f9e58a;
   margin-top: 3%;
   width: 85%;
   display: flex;
@@ -580,18 +612,11 @@ main {
   margin: 2% auto;
 }
 
-
-footer {
-  background-color: #967adc;
-  padding: 60px 10px;
-}
-
 h1 {
   font-family: 'Comic Neue', cursive;
 }
 
 .higlights {
-  display: flex;
   border: 5px dotted white;
 }
 
@@ -642,7 +667,6 @@ li::marker {
   font-size: larger;
   color: #ff6f61
 }
-
 
 li {
   font-size: large;
