--- a/output.css
+++ b/output.css
@@ -416,6 +416,9 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+.visible {
+  visibility: visible;
+}
 .m-0 {
   margin: 0px;
 }
